--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -91,10 +91,46 @@
     "backToDashboard": "Back to Dashboard",
     "accessDenied": "Access Denied",
     "accessDeniedMessage": "You don't have access to this course. Please contact your administrator to enroll.",
+    "instructorAccessDenied": "You need to be assigned to this course to view it.",
     "prerequisites": "Prerequisites",
     "hours": "hours",
     "students": "students",
-    "courseInfo": "Course Info"
+    "courseInfo": "Course Info",
+    "adminAccess": "Admin Access",
+    "editCourse": "Edit Course",
+    "courseOverview": "Course Overview",
+    "noDescription": "No course description available.",
+    "generalMaterials": "General Course Materials",
+    "loadingMaterials": "Loading materials...",
+    "download": "Download",
+    "courseSessions": "Course Sessions",
+    "loadingSessions": "Loading sessions...",
+    "adminView": "Admin View:",
+    "instructorView": "Instructor View:",
+    "viewingAsAdmin": "You are viewing this course as an admin.",
+    "viewingAsInstructor": "You are viewing this course as an instructor.",
+    "manageInstructors": "Manage Instructors",
+    "assigned": "Assigned",
+    "noInstructorsAssigned": "No instructors assigned yet.",
+    "remove": "Remove",
+    "addInstructor": "Add Instructor",
+    "allInstructorsAssigned": "All instructors are already assigned.",
+    "add": "Add",
+    "courseDetails": "Course Details",
+    "startDate": "Start Date",
+    "duration": "Duration",
+    "schedule": "Schedule",
+    "modality": "Modality",
+    "totalHours": "Total Hours",
+    "tools": "Tools",
+    "enrolledStudents": "Enrolled Students",
+    "studentsCount": "students",
+    "instructorAssignedSuccess": "Instructor assigned successfully!",
+    "instructorAssignedError": "Failed to assign instructor",
+    "instructorRemovedSuccess": "Instructor removed successfully!",
+    "instructorRemovedError": "Failed to remove instructor",
+    "confirmRemoveInstructor": "Are you sure you want to remove this instructor from the course?",
+    "errorOccurred": "An error occurred"
   },
   "password": {
     "weak": "weak",
@@ -230,15 +266,46 @@
       "session": "Session"
     },
     "students": {
-      "title": "Enrolled Students",
+      "title": "Students Enrolled in",
       "backToDashboard": "Back to Dashboard",
+      "loadingStudents": "Loading students...",
       "noStudents": "No students enrolled yet",
-      "noStudentsMessage": "Students will appear here once they enroll in your course",
-      "studentName": "Student Name",
-      "email": "Email",
-      "enrolledDate": "Enrolled Date",
-      "actions": "Actions",
-      "loadingStudents": "Loading students..."
+      "noStudentsMessage": "Students will appear here once they sign up for this course.",
+      "studentsCount": "of",
+      "student": "student",
+      "studentsPlural": "students",
+      "noMatchingStudents": "No students match your filters",
+      "adjustFilters": "Try adjusting your search or filter criteria.",
+      "search": "Search",
+      "searchPlaceholder": "Search by name or email...",
+      "filterByStatus": "Filter by Status",
+      "allStatuses": "All Statuses",
+      "pending": "Pending",
+      "confirmed": "Confirmed",
+      "enrolled": "Enrolled",
+      "sortBy": "Sort By",
+      "newestFirst": "Newest First",
+      "oldestFirst": "Oldest First",
+      "nameAZ": "Name (A-Z)",
+      "nameZA": "Name (Z-A)",
+      "statusAZ": "Status (A-Z)",
+      "statusZA": "Status (Z-A)",
+      "studentColumn": "Student",
+      "emailColumn": "Email",
+      "statusColumn": "Status",
+      "enrolledColumn": "Enrolled",
+      "languageColumn": "Language",
+      "actionsColumn": "Actions",
+      "removeStudent": "Remove student",
+      "removeStudentButton": "Remove Student",
+      "removing": "Removing...",
+      "statusUpdated": "Status updated successfully",
+      "studentRemoved": "Student removed successfully",
+      "failedToLoad": "Failed to load students",
+      "errorOccurred": "An error occurred",
+      "failedToUpdate": "Failed to update status",
+      "failedToDelete": "Failed to delete student",
+      "confirmDelete": "Are you sure you want to remove {name} from this course? This action cannot be undone."
     },
     "common": {
       "backToDashboard": "Back to Dashboard",
