--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -91,10 +91,46 @@
     "backToDashboard": "Volver al Panel",
     "accessDenied": "Acceso Denegado",
     "accessDeniedMessage": "No tienes acceso a este curso. Por favor contacta a tu administrador para inscribirte.",
+    "instructorAccessDenied": "Necesitas estar asignado a este curso para verlo.",
     "prerequisites": "Requisitos Previos",
     "hours": "horas",
     "students": "estudiantes",
-    "courseInfo": "Información del Curso"
+    "courseInfo": "Información del Curso",
+    "adminAccess": "Acceso de Administrador",
+    "editCourse": "Editar Curso",
+    "courseOverview": "Resumen del Curso",
+    "noDescription": "No hay descripción del curso disponible.",
+    "generalMaterials": "Materiales Generales del Curso",
+    "loadingMaterials": "Cargando materiales...",
+    "download": "Descargar",
+    "courseSessions": "Sesiones del Curso",
+    "loadingSessions": "Cargando sesiones...",
+    "adminView": "Vista de Administrador:",
+    "instructorView": "Vista de Instructor:",
+    "viewingAsAdmin": "Estás viendo este curso como administrador.",
+    "viewingAsInstructor": "Estás viendo este curso como instructor.",
+    "manageInstructors": "Gestionar Instructores",
+    "assigned": "Asignados",
+    "noInstructorsAssigned": "Aún no hay instructores asignados.",
+    "remove": "Eliminar",
+    "addInstructor": "Añadir Instructor",
+    "allInstructorsAssigned": "Todos los instructores ya están asignados.",
+    "add": "Añadir",
+    "courseDetails": "Detalles del Curso",
+    "startDate": "Fecha de Inicio",
+    "duration": "Duración",
+    "schedule": "Horario",
+    "modality": "Modalidad",
+    "totalHours": "Horas Totales",
+    "tools": "Herramientas",
+    "enrolledStudents": "Estudiantes Inscritos",
+    "studentsCount": "estudiantes",
+    "instructorAssignedSuccess": "¡Instructor asignado exitosamente!",
+    "instructorAssignedError": "Error al asignar instructor",
+    "instructorRemovedSuccess": "¡Instructor eliminado exitosamente!",
+    "instructorRemovedError": "Error al eliminar instructor",
+    "confirmRemoveInstructor": "¿Estás seguro de que quieres eliminar a este instructor del curso?",
+    "errorOccurred": "Ocurrió un error"
   },
   "password": {
     "weak": "débil",
@@ -230,15 +266,46 @@
       "session": "Sesión"
     },
     "students": {
-      "title": "Estudiantes Inscritos",
+      "title": "Estudiantes Inscritos en",
       "backToDashboard": "Volver al Panel",
+      "loadingStudents": "Cargando estudiantes...",
       "noStudents": "Aún no hay estudiantes inscritos",
-      "noStudentsMessage": "Los estudiantes aparecerán aquí una vez que se inscriban en tu curso",
-      "studentName": "Nombre del Estudiante",
-      "email": "Correo Electrónico",
-      "enrolledDate": "Fecha de Inscripción",
-      "actions": "Acciones",
-      "loadingStudents": "Cargando estudiantes..."
+      "noStudentsMessage": "Los estudiantes aparecerán aquí una vez que se registren en este curso.",
+      "studentsCount": "de",
+      "student": "estudiante",
+      "studentsPlural": "estudiantes",
+      "noMatchingStudents": "No hay estudiantes que coincidan con tus filtros",
+      "adjustFilters": "Intenta ajustar tus criterios de búsqueda o filtro.",
+      "search": "Buscar",
+      "searchPlaceholder": "Buscar por nombre o correo...",
+      "filterByStatus": "Filtrar por Estado",
+      "allStatuses": "Todos los Estados",
+      "pending": "Pendiente",
+      "confirmed": "Confirmado",
+      "enrolled": "Inscrito",
+      "sortBy": "Ordenar Por",
+      "newestFirst": "Más Recientes",
+      "oldestFirst": "Más Antiguos",
+      "nameAZ": "Nombre (A-Z)",
+      "nameZA": "Nombre (Z-A)",
+      "statusAZ": "Estado (A-Z)",
+      "statusZA": "Estado (Z-A)",
+      "studentColumn": "Estudiante",
+      "emailColumn": "Correo",
+      "statusColumn": "Estado",
+      "enrolledColumn": "Inscrito",
+      "languageColumn": "Idioma",
+      "actionsColumn": "Acciones",
+      "removeStudent": "Eliminar estudiante",
+      "removeStudentButton": "Eliminar Estudiante",
+      "removing": "Eliminando...",
+      "statusUpdated": "Estado actualizado exitosamente",
+      "studentRemoved": "Estudiante eliminado exitosamente",
+      "failedToLoad": "Error al cargar estudiantes",
+      "errorOccurred": "Ocurrió un error",
+      "failedToUpdate": "Error al actualizar el estado",
+      "failedToDelete": "Error al eliminar estudiante",
+      "confirmDelete": "¿Estás seguro de que quieres eliminar a {name} de este curso? Esta acción no se puede deshacer."
     },
     "common": {
       "backToDashboard": "Volver al Panel",
