--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -154,6 +154,47 @@
     "dontHaveAccount": "Don't have an account?",
     "alreadyHaveAccount": "Already have an account?"
   },
+  "resetPassword": {
+    "title": "Reset Password",
+    "subtitle": "Enter your email address and we'll send you a link to reset your password",
+    "sendButton": "Send Reset Link",
+    "sending": "Sending...",
+    "backToLogin": "Back to Login",
+    "checkEmailTitle": "Check Your Email",
+    "checkEmailMessage": "If an account exists with {email}, you will receive a password reset link shortly.",
+    "linkExpiry": "The link will expire in 1 hour.",
+    "confirmTitle": "Set New Password",
+    "confirmSubtitle": "Enter your new password below",
+    "newPasswordLabel": "New Password",
+    "confirmPasswordLabel": "Confirm New Password",
+    "resetButton": "Reset Password",
+    "resetting": "Resetting Password...",
+    "verifyingLink": "Verifying reset link...",
+    "invalidLinkTitle": "Invalid Link",
+    "requestNewLink": "Request a New Reset Link",
+    "successTitle": "Password Reset!",
+    "successMessage": "Your password has been successfully reset.",
+    "redirecting": "Redirecting to login...",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "passwordRequirementsError": "Password does not meet requirements. Check password strength indicator below.",
+    "invalidResetLink": "Invalid reset link",
+    "email": {
+      "senderName": "Idir",
+      "senderPreposition": "from",
+      "subject": "Reset your password for idir.ai",
+      "preheader": "Reset your password securely",
+      "greeting": "Hello {firstName},",
+      "message1": "We received a request to reset your account password.",
+      "message2": "Click the button below to proceed with the password reset process:",
+      "buttonText": "Reset Password",
+      "expiryText": "This link will expire in 1 hour for security reasons.",
+      "ignoreText": "If you did not request a password reset, you can safely ignore this email.",
+      "closingText": "Best regards,",
+      "signature": "The idir.ai Team",
+      "footerText": "© {year} idir.ai. All rights reserved.",
+      "alternativeText": "If the button doesn't work, copy and paste this link into your browser:"
+    }
+  },
   "profile": {
     "title": "Profile Settings",
     "personalInfo": "Personal Information",
