--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -154,6 +154,47 @@
     "dontHaveAccount": "¿No tienes una cuenta?",
     "alreadyHaveAccount": "¿Ya tienes una cuenta?"
   },
+  "resetPassword": {
+    "title": "Restablecer Contraseña",
+    "subtitle": "Ingresa tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña",
+    "sendButton": "Enviar Enlace",
+    "sending": "Enviando...",
+    "backToLogin": "Volver al Inicio de Sesión",
+    "checkEmailTitle": "Revisa tu Correo",
+    "checkEmailMessage": "Si existe una cuenta con {email}, recibirás un enlace para restablecer tu contraseña en breve.",
+    "linkExpiry": "El enlace expirará en 1 hora.",
+    "confirmTitle": "Establecer Nueva Contraseña",
+    "confirmSubtitle": "Ingresa tu nueva contraseña a continuación",
+    "newPasswordLabel": "Nueva Contraseña",
+    "confirmPasswordLabel": "Confirmar Nueva Contraseña",
+    "resetButton": "Restablecer Contraseña",
+    "resetting": "Restableciendo Contraseña...",
+    "verifyingLink": "Verificando enlace de restablecimiento...",
+    "invalidLinkTitle": "Enlace Inválido",
+    "requestNewLink": "Solicitar un Nuevo Enlace",
+    "successTitle": "¡Contraseña Restablecida!",
+    "successMessage": "Tu contraseña ha sido restablecida exitosamente.",
+    "redirecting": "Redirigiendo al inicio de sesión...",
+    "passwordsDoNotMatch": "Las contraseñas no coinciden",
+    "passwordRequirementsError": "La contraseña no cumple con los requisitos. Verifica el indicador de seguridad de contraseña a continuación.",
+    "invalidResetLink": "Enlace de restablecimiento inválido",
+    "email": {
+      "senderName": "Idir",
+      "senderPreposition": "de",
+      "subject": "Restablece tu contraseña de idir.ai",
+      "preheader": "Restablece tu contraseña de forma segura",
+      "greeting": "Hola {firstName},",
+      "message1": "Recibimos una solicitud para restablecer la contraseña de tu cuenta.",
+      "message2": "Haz clic en el botón de abajo para continuar con el proceso de restablecimiento:",
+      "buttonText": "Restablecer Contraseña",
+      "expiryText": "Este enlace expirará en 1 hora por seguridad.",
+      "ignoreText": "Si no solicitaste restablecer tu contraseña, puedes ignorar este correo de forma segura.",
+      "closingText": "Saludos cordiales,",
+      "signature": "El equipo de idir.ai",
+      "footerText": "© {year} idir.ai. Todos los derechos reservados.",
+      "alternativeText": "Si el botón no funciona, copia y pega este enlace en tu navegador:"
+    }
+  },
   "profile": {
     "title": "Configuración de Perfil",
     "personalInfo": "Información Personal",
