--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -9,7 +9,19 @@
     "fullName": "Full Name",
     "createAccount": "Create Account",
     "menu": "Menu",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "deletePost": "Delete",
+    "deleteAnswer": "Delete",
+    "deleting": "Deleting...",
+    "deleteError": "Failed to delete. Please try again.",
+    "deletePostConfirm": {
+      "title": "Delete Post?",
+      "message": "Are you sure you want to delete this post? This action cannot be undone and will also delete all answers."
+    },
+    "deleteAnswerConfirm": {
+      "title": "Delete Answer?",
+      "message": "Are you sure you want to delete this answer? This action cannot be undone."
+    }
   },
   "home": {
     "title": "COURSES",
